@@ -103,7 +103,6 @@ MSG_error_t test_all(const char *platform_file,
   /* MSG_config("surf_workstation_model","KCCFLN05"); */
   {				/*  Simulation setting */
     MSG_set_channel_number(0);
-    MSG_paje_output("msg_test.trace");
     MSG_create_environment(platform_file);
   }
   {                            /*   Application deployment */
