@@ -46,7 +46,6 @@ static MSG_error_t test_all(const char *platform_file,
 
   {                             /*  Simulation setting */
     MSG_set_channel_number(1);
-    MSG_paje_output("msg_test.trace");
     MSG_create_environment(platform_file);
   }
   {                             /*   Application deployment */
